sumo/tests/duarouter/errors/no_output/options.duarouter
--net-file=net.net.xml --trip-defs=increasing_trips.trips.xml
